# bezier-curve-visualizer

./: CMakeLists.txt  LICENSE  flake.nix
assets/: iconset.rgi
src/: main.c
